testsuite/poke.pkl/attr-eoffset-diag-1.pk
/* { dg-do compile } */

type t=struct{int8[
   8'eoffset (0) /* { dg-error "not defined" } */
];};
